# Perceptual_Straightening_in_Video_Diffusion

./: .gitignore  IMPLEMENTATION_GUIDE.md  INNOVATIONS_SUMMARY.md  QUICK_START.md  README.md  doing_it_right.ipynb  extensionPlan.md  hypothesis_testing.ipynb  main.py  perceptual_straightening_sushi.ipynb  poly-trajectory-aekl.ipynb  poly_trajectory_psh.ipynb  pyproject.toml  refs.bib  report.md  sushi-does-it-again.ipynb  sushi-perceptual-poly-encdec-v2.ipynb  sushi-perceptual-poly-encdec.ipynb  sushi_does_it_again.py  test_dino_diff_datasets.py  test_dino_diff_datasets_trajectory.py
experiment-results-comp/metrics/: all_metrics.json
experiment-results-prev/plots/: summary.json
experiment-results/metadata/: additional_eval_metrics_perceptual_pairs.json  additional_eval_metrics_sushi.json  all_pair_metrics.json  experiment_summary.json  metrics_pair_A.json  metrics_pair_B.json  metrics_pair_C.json
